--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -418,7 +418,8 @@ service qmuxd /vendor/bin/qmuxd
 
 service netmgrd /vendor/bin/netmgrd
     class main
-    group radio system wakelock
+    user root
+    group root wifi wakelock radio inet
     writepid /dev/cpuset/system-background/tasks
 
 # Adjust socket buffer to enlarge TCP receive window for high bandwidth
