A6020: init: Set ioprio for rmt_storage service
Earlier, this used to be set from rmt_storage service with
sys_admin capability. But now, that capability is dropped
off and hence, set it here in init scripts.

Change-Id: Ie8a3895c2b63da35d78fb9e571d74b735c969520

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -388,6 +388,7 @@ service rmt_storage /system/vendor/bin/rmt_storage
     user root
     group system wakelock
     writepid /dev/cpuset/system-background/tasks
+    ioprio rt 0
 
 service hciattach /system/vendor/bin/hci_qcomm_init -e
     class late_start
